[package]
name = "hasp_core"
version = "0.1.0"
edition = "2024"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database (SQLite)
rusqlite = { version = "0.31", features = ["bundled"] }

# Security / Crypto
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
thiserror = "1.0" # Great for custom error handling in libraries